crates/cribo/tests/snapshots/bundled_code@collections_abc_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_abc_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from collections import OrderedDict
from collections.abc import MutableMapping
"""Test case for collections.abc imports being hoisted properly."""
def test_func():
    od = OrderedDict()
    od['a'] = 1
    od['b'] = 2
    assert isinstance(od, MutableMapping)
    print("OrderedDict is a MutableMapping:", isinstance(od, MutableMapping))
    print("OrderedDict contents:", dict(od))
if __name__ == "__main__":
    test_func()
