crates/cribo/tests/snapshots/bundled_code@conditional_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys
import functools as _cribo_functools
import json as _cribo_json
import sys as _cribo_sys
import types as _cribo_types
import xml.etree.ElementTree as _cribo_xml_etree_ElementTree
_cribo = _cribo_types.SimpleNamespace(__name__='_cribo', functools=_cribo_functools, json=_cribo_json, sys=_cribo_sys, types=_cribo_types)
setattr(_cribo, 'xml.etree.ElementTree', _cribo_xml_etree_ElementTree)
@_cribo.functools.cache
def _cribo_init___cribo_17f1ec_try_except_module():
    _cribo_module = _cribo.types.SimpleNamespace()
    _cribo_module.__name__ = 'try_except_module'
    """Module with imports inside try/except blocks."""
    etree = None
    _cribo_module.etree = etree
    ETREE_VERSION = None
    _cribo_module.ETREE_VERSION = ETREE_VERSION
    try:
        from lxml import etree
        _cribo_module.etree = etree
        ETREE_VERSION = "lxml"
        _cribo_module.ETREE_VERSION = ETREE_VERSION
    except ImportError:
        try:
            import xml.etree.ElementTree as etree
            _cribo_module.etree = etree
            ETREE_VERSION = "stdlib"
            _cribo_module.ETREE_VERSION = ETREE_VERSION
        except ImportError:
            etree = None
            _cribo_module.etree = etree
            ETREE_VERSION = None
            _cribo_module.ETREE_VERSION = ETREE_VERSION
    parser_backend = None
    _cribo_module.parser_backend = parser_backend
    try:
        import cElementTree as ET
        _cribo_module.ET = ET
        parser_backend = "cElementTree"
        _cribo_module.parser_backend = parser_backend
    except ImportError:
        try:
            import xml.etree.ElementTree as ET
            _cribo_module.ET = ET
            parser_backend = "ElementTree"
            _cribo_module.parser_backend = parser_backend
        except ImportError:
            ET = None
            _cribo_module.ET = ET
            parser_backend = None
            _cribo_module.parser_backend = parser_backend

    def parse_xml(xml_string):
        """Parse XML using available parser."""
        if etree is not None:
            return _cribo_module.etree.fromstring(xml_string)
        elif ET is not None:
            return ET.fromstring(xml_string)
        else:
            raise ImportError("No XML parser available")
    _cribo_module.parse_xml = parse_xml
    return _cribo_module
@_cribo.functools.cache
def _cribo_init___cribo_e43fad_conditional_module():
    _cribo_module = _cribo.types.SimpleNamespace()
    _cribo_module.__name__ = 'conditional_module'
    """Module with conditional imports inside if/else blocks."""
    has_simplejson = False
    _cribo_module.has_simplejson = has_simplejson
    try:
        import simplejson as json
        _cribo_module.json = json
        has_simplejson = True
        _cribo_module.has_simplejson = has_simplejson
    except ImportError:
        import json
        _cribo_module.json = json
    if has_simplejson:
        from simplejson import JSONDecodeError
        _cribo_module.JSONDecodeError = JSONDecodeError
    else:
        from json import JSONDecodeError
        _cribo_module.JSONDecodeError = JSONDecodeError
    if sys.version_info[0] >= 3:
        builtin_str = str
        _cribo_module.builtin_str = builtin_str
        my_str = str
        _cribo_module.my_str = my_str
    else:
        builtin_str = str
        _cribo_module.builtin_str = builtin_str
        my_str = unicode
        _cribo_module.my_str = my_str
    basestring = str, bytes
    _cribo_module.basestring = basestring
    if has_simplejson:
        if hasattr(json, "JSONDecodeError"):
            pass
        else:
            JSONDecodeError = ValueError
            _cribo_module.JSONDecodeError = JSONDecodeError
    else:
        pass

    def decode_json(text):
        """Decode JSON using the conditionally imported decoder."""
        try:
            return json.loads(text)
        except JSONDecodeError as e:
            return None
    _cribo_module.decode_json = decode_json
    return _cribo_module
"""Test conditional imports in if/else and try/except blocks."""
conditional_module = _cribo_init___cribo_e43fad_conditional_module()
try_except_module = _cribo_init___cribo_17f1ec_try_except_module()
print("If/else import - JSONDecodeError:", hasattr(conditional_module, "JSONDecodeError"))
print("If/else import - json:", hasattr(conditional_module, "json"))
print("If/else import - builtin_str:", hasattr(conditional_module, "builtin_str"))
try:
    raise conditional_module.JSONDecodeError("test", "doc", 0)
except conditional_module.JSONDecodeError as e:
    print("Successfully caught JSONDecodeError from conditional import")
print("Try/except import - etree:", hasattr(try_except_module, "etree"))
print("Try/except import - ETREE_VERSION:", hasattr(try_except_module, "ETREE_VERSION"))
if try_except_module.etree is not None:
    print("Successfully imported etree module")
else:
    print("etree module is None (not available)")
expected_attrs = ["JSONDecodeError", "json", "builtin_str", "basestring", "has_simplejson"]
for attr in expected_attrs:
    if hasattr(conditional_module, attr):
        print(f"✓ {attr} is accessible")
    else:
        print(f"✗ {attr} is NOT accessible")
