crates/cribo/tests/snapshots/bundled_code@conditional_wildcard_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_wildcard_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
defaults = _cribo.types.SimpleNamespace(__name__='defaults', __doc__='Default constants used via wildcard import.')
"""Default constants used via wildcard import."""
MAX_RETRIES = 3
DEFAULT_TIMEOUT = 30
API_VERSION = "v2"
defaults.API_VERSION = API_VERSION
defaults.DEFAULT_TIMEOUT = DEFAULT_TIMEOUT
defaults.MAX_RETRIES = MAX_RETRIES
config = _cribo.types.SimpleNamespace(__name__='config', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_33ed77_config(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """Config module with side effects (triggers wrapper) and conditional wildcard import."""
    print("config module loaded")
    try:
        API_VERSION = defaults.API_VERSION
        config.API_VERSION = API_VERSION
        DEFAULT_TIMEOUT = defaults.DEFAULT_TIMEOUT
        config.DEFAULT_TIMEOUT = DEFAULT_TIMEOUT
        MAX_RETRIES = defaults.MAX_RETRIES
        config.MAX_RETRIES = MAX_RETRIES
    except ImportError:
        MAX_RETRIES = 1
        config.MAX_RETRIES = MAX_RETRIES
        DEFAULT_TIMEOUT = 60
        config.DEFAULT_TIMEOUT = DEFAULT_TIMEOUT
        API_VERSION = "v1"
        config.API_VERSION = API_VERSION

    def get_config():
        return {"max_retries": MAX_RETRIES, "timeout": DEFAULT_TIMEOUT, "api_version": API_VERSION}
    self.get_config = get_config
    self.__initialized__ = True
    self.__initializing__ = False
    return self
config.__init__ = _cribo_init___cribo_33ed77_config
"""\nTest that conditional wildcard imports (from x import *) inside try\nblocks in wrapper modules do not produce invalid code like `module.* = *`.\n"""
config = _cribo_init___cribo_33ed77_config(config)
get_config = config.get_config
result = get_config()
print(f"max_retries={result['max_retries']}")
print(f"timeout={result['timeout']}")
print(f"api_version={result['api_version']}")
